# silex

./: .gitignore  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements-build.txt  requirements-dev.txt  requirements-docs.txt  setup.py
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: Doxyfile.in  api_guide.md  architecture.md  build_and_test.md  getting_started.md  index.md  schema_authoring.md  schema_cookbook.md  troubleshooting.md
docs/api/: cpp_api.md  index.md  python_api.md
docs/architecture-decision-records/: ADR-001-graph-based-schema-architecture.md  ADR-002-expression-graph-with-functors.md  ADR-003-uri-support-for-fr-asset-api.md  ADR-004-context-mutation-during-write.md  ADR-005-deprecated-segment-traversal-and-plural-resolution.md  ADR-006-canonical-asset-directory-layout.md  ADR-007-cpp-port-and-architecture-redesign.md  ADR-008-release-documentation-and-doxygen-api-site.md  ADR-009-parse-format-terminology-for-schema-and-functor-operations.md  ADR-010-pypi-packaging-and-github-actions-release-pipeline.md  README.md
examples/: README.md
examples/01_minimal_filesystem/: schema.silex  usage.py
examples/02_templates_and_shared_variables/: common.silex  schema.silex  silex_core.silex  usage.py
examples/03_uri_query_params/: schema.silex  usage.py
examples/04_base_publish/: schema.silex  usage.py
examples/05_client_publish_override/: schema.silex  usage.py
examples/06_deprecated_migration/: schema.silex  usage.py
examples/07_project_filesystem_layout/: common.silex  schema.silex  usage.py
examples/08_shot_publish_layout/: common.silex  schema.silex  usage.py
examples/09_asset_uri_identifier/: schema.silex  usage.py
examples/10_sceptre_context_path/: schema.silex  usage.py
examples/11_custom_functor/: custom_functors.py  schema.silex  usage.py
examples/12_shot_publish_override/: schema.silex  usage.py
schema/: silex_schema.json
scripts/: build_docs.py
search_path/: common.silex  fr_fs_projects.silex  silex_core.silex
source/silex_core/: CMakeLists.txt
source/silex_core/bindings/: CMakeLists.txt  bind_constants.cpp  bind_core.cpp  bind_functors.cpp  bind_helpers.h  bind_interfaces.cpp  bind_resolver.cpp  bind_segmenters.cpp  bind_structs.cpp  module.cpp
source/silex_core/include/silex/: Box.h  GenericResolver.h  constants.h  export.h  structs.h
source/silex_core/include/silex/interfaces/: IExpressionEvaluator.h  IExpressionParser.h  IFunctor.h  ILoader.h  IResolver.h  ISegmenter.h
source/silex_core/src/expression/: DAG.h  ExpressionEvaluator.cpp  ExpressionEvaluator.h  ExpressionParser.cpp  ExpressionParser.h
source/silex_core/src/functors/: CaseConversionFunctor.cpp  CaseConversionFunctor.h  CaseSplitFunctor.cpp  CaseSplitFunctor.h  GlobFunctor.cpp  GlobFunctor.h  GlobTagFunctor.cpp  GlobTagFunctor.h  LexiconFunctor.cpp  LexiconFunctor.h
source/silex_core/src/registry/: BuiltinRegistrar.cpp  BuiltinRegistrar.h  Registry.cpp  Registry.h
source/silex_core/src/resolver/: GenericResolver.cpp  ResolverHelpers.cpp  ResolverHelpers.h
source/silex_core/src/resolver/private/: GenericResolver_p.cpp  GenericResolver_p.h
source/silex_core/src/schema/: FileSchemaLoader.cpp  FileSchemaLoader.h  SchemaUtils.cpp  SchemaUtils.h  SchemaValidator.cpp  SchemaValidator.h
source/silex_core/src/segmenters/: FilesystemSegmenter.cpp  FilesystemSegmenter.h  URISegmenter.cpp  URISegmenter.h
source/silex_core/src/util/: Logging.cpp  Logging.h  Utils.cpp  Utils.h
tests/: conftest.py  test_templates.py
tests/cpp/: CMakeLists.txt  test_constants.cpp  test_resolver.cpp  test_utils.cpp
tests/integration/: test_examples.py  test_expression_evaluation.py  test_filesystem_resolution.py  test_glob_tag_integration.py  test_uri_resolution.py
tests/resources/: common.silex  file_resolver.silex  silex_core.silex  template_test.silex  test_basic.silex  test_case_sensitivity.silex  test_case_sensitivity_strict.silex  test_integration.silex  test_switch_placeholder.silex  test_uri.silex  testpipe_file_resolver.silex
tests/search_dir/seq_shot_test/: .seq010_shot020_v001.published  seq010_shot020_v001.exr  seq010_shot020_v002.exr
tests/search_dir/tag_test/: .test_v001.published  .test_v002.deprecated  .test_v003.pending  .test_v004.approved  test_v001.ma  test_v002.ma  test_v003.ma  test_v004.ma
tests/unit/: test_case_sensitivity.py  test_deprecated_traversal.py  test_expression_evaluator.py  test_expression_parsing.py  test_fallback_partitions.py  test_logging_config.py  test_partition_processing.py  test_resolve_structs.py  test_schema_loader.py  test_schema_validation.py  test_segmenter_filesystem.py  test_switch_placeholder.py  test_template_resolution.py
tests/unit/functors/: test_case_conversion.py  test_case_split.py  test_glob.py  test_glob_tag.py  test_lexicon.py
